added navbar and hero section with out adaptive

--- a/index.html
+++ b/index.html
@@ -5,16 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/normalize.css">
     <title>gridTEST</title>
 </head>
 <body>
-    <div>
-        <section>1</section>
-        <section>2</section>
-        <section>3</section>
-        <section>5</section>
-        <section>6</section>
-        <section>7</section>
-    </div>
+  <header class="header">
+        <div class="menu menu__active">
+                <div class="container">
+                       <div class="menu-wrap">
+                               <nav class="menu__nav">
+                                   <a href="#" class="menu__link">Главная</a>
+                                   <a href="#" class="menu__link">Продукция</a>
+                                   <a href="#" class="menu__link">Примеры работ</a>
+                                   <a href="#" class="menu__link">Примерка изображений</a>
+                                   <a href="#" class="menu__link">Стоимость дилерам</a>
+                                   <a href="#" class="menu__link">О скинали</a>
+                               </nav>
+                           </div>
+                </div>
+             </div>
+      <div class="navbar">
+          <div class="container">
+          <div class="navbar-wrap">
+            <button class="menu-button navbar__menu-button">
+                <span class="menu-button__line"></span>
+                <span class="menu-button__line"></span>
+                <span class="menu-button__line"></span>
+            </button>
+            <div class="logo navbar__logo">
+                <strong class="logo__text">Фабрика скинали №1</strong>
+                <span class="logo__description">Ведущий производитель скинали</span>
+            </div>
+            <div class="navbar__mobile">
+              <a href="tel:+79999999999" class="navbar__phone">+7(999) 999-99-99</a>
+              <span class="navbar__work-time navbar__small-text ">без выходных 9-21</span>
+            </div>
+            <div class="navbar__lendline">
+              <a href="tel:+79999999999" class="navbar__phone">+7(999) 999-99-99</a>
+              <a href="mailto:effectcor@mail.com"class="navbar__emain  navbar__small-text ">effectcor@mail.com</a>
+            </div>
+            <button class="button-o navbar__button">получить консультацию</button>
+          </div>
+          <!-- /.navbar-wrap -->
+          </div>
+      </div>
+      <!-- /.nav-bar -->
+      <div class="hero">
+          <div class="container">
+              <div class="hero__title">
+                  Гарантия <br> минимальной цены <br> на скидки 
+              </div>
+             <span class="hero__subtitile">3000 р/м2</span>
+             <button class="hero__button button">заказать скинали</button>
+          </div>
+      </div>
+      <!-- /.hero -->
+  </header>
+  <!-- /.header -->
 </body>
 </html>
