--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/normalize.css">
@@ -62,5 +62,15 @@
       <!-- /.hero -->
   </header>
   <!-- /.header -->
+  <div class="gird">
+      <div class="gird__item"></div>
+      <div class="gird__item"></div>
+      <div class="gird__item"></div>
+      <div class="gird__item"></div>
+      <div class="gird__item"></div>
+      <div class="gird__item"></div>
+      <div class="gird__item big"></div>
+      <div class="gird__item"></div>
+  </div>
 </body>
 </html>
