--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header class="header">
-        <div class="menu menu__active">
+        <div class="menu">
                 <div class="container">
                        <div class="menu-wrap">
                                <nav class="menu__nav">
@@ -18,6 +18,7 @@
                                    <a href="#" class="menu__link">Продукция</a>
                                    <a href="#" class="menu__link">Примеры работ</a>
                                    <a href="#" class="menu__link">Примерка изображений</a>
+                                   <a href="#" class="menu__link">Каталог</a>
                                    <a href="#" class="menu__link">Стоимость дилерам</a>
                                    <a href="#" class="menu__link">О скинали</a>
                                </nav>
