added wiget spikmi

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       <div class="gird__item big"></div>
       <div class="gird__item"></div>
   </div>
-  
+  <!-- Подключение виджета обратной связи -->
+  <script type="text/javascript" src="https://spikmi.com/Widget?Id=1480"></script>
 </body>
 </html>
