added block offer

--- a/index.html
+++ b/index.html
@@ -63,16 +63,60 @@
       <!-- /.hero -->
   </header>
   <!-- /.header -->
-  <div class="gird">
-      <div class="gird__item"></div>
-      <div class="gird__item"></div>
-      <div class="gird__item"></div>
-      <div class="gird__item"></div>
-      <div class="gird__item"></div>
-      <div class="gird__item"></div>
-      <div class="gird__item big"></div>
-      <div class="gird__item"></div>
-  </div>
+  <main>
+      <section class="offer bg-secondary">
+          <div class="container">
+              <div class="offer__block offer-block">
+                  <h2 class="offer__subtitle">Оставьте заявку на расчет</h2>
+                  <span class="offer__subtitle">и получите скидку 30% на изготовление скинали или фартука для кухни </span>
+                  <form action="" class="form offer__from">
+                      <div class="from__row">
+                          <div class="from__group">
+                            <label for="" class="from__label">Вид стекла</label> <!-- /.from__label -->
+                            <input type="text" class="input form__input">
+                        </div>
+                          <!-- /.from__group -->
+                          <div class="from__group">
+                            <label for="" class="from__label">Ширена в см.</label> <!-- /.from__label -->
+                            <input type="text" class="input form__input">
+                        </div>
+                          <!-- /.from__group -->
+                          <div class="from__group">
+                            <label for="" class="from__label">Высота в см.</label> <!-- /.from__label -->
+                            <input type="text" class="input form__input">
+                        </div>
+                          <!-- /.from__group -->
+                      </div>
+
+                      <div class="from__row">
+                          <div class="from__checkbox">
+                              <label for="">
+                                  <input type="checkbox">
+                                    Монтаж
+                              </label>
+                            </div>
+                            <div class="from__checkbox">
+                                <label for="">
+                                    <input type="checkbox">
+                                    Доставка
+                                </label>
+                            </div>
+                      </div>
+                      <!-- /.from__row -->
+                      <div class="form_group">
+                          <input type="text" placeholder="Ваше имя">
+                    </div>
+                      <div class="form_group">
+                          <input type="tel" placeholder="Ваш телефон">
+                    </div>
+                      <div class="form_group">
+                          <input type="submit" class="button" value="Получить скидку">
+                    </div>
+                  </form>
+              </div>
+          </div>
+      </section>
+  </main>
   <!-- Подключение виджета обратной связи -->
   <script type="text/javascript" src="https://spikmi.com/Widget?Id=1480"></script>
 </body>
